projet_GOCass/tests/tests/good/print/string.go
package main

import "fmt"

func main() {
	fmt.Print("a")
}

/*
== Expected program output ==
a
*/
